--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 remote_theme             : "jamiesmith/minimal-mistakes"
 
-minimal_mistakes_skin    : "theastroshed"
+minimal_mistakes_skin    : "jrsdark"
 
 # Site Settings
 locale                   : "en-US"
