--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : "commentbox" # "staticman_v2" # false (default), "disqus", "discourse", "facebook", "staticman_v2", "staticman" "custom"
+#  provider               : "commentbox" # "staticman_v2" # false (default), "disqus", "discourse", "facebook", "staticman_v2", "staticman" "custom"
   disqus:
     shortname            :
   discourse:
