--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/homepage/choctini.jpg"
-  bio              : "Woodworker, Explaineer, and Bar Geek"
+  bio              : "Woodworker. Explaineer. Bar Geek."
   location         : "Charlotte, NC"
   email            :
   uri              : "https://www.theastroshed.com"
