--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@
 jamiesmith:
   name         : "Jamie Smith"
   uri          : "https://www.theastroshed.com"
-  avatar       : "/assets/images/homepage/choctini.jpg"
-  bio          : "Woodworker. Explaineer. Bar Geek."
+  avatar       : "/assets/images/homepage/jamie-smith.jpg"
+  bio          : "Woodworker. Explaineer. Gadget Geek."
   location     : "Charlotte, NC"
   github       : "jamiesmith"
   instagram    : "jamiesmithnc"
