--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "jrsdark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "The Astro Shed"
+title                    : "theAstroShed"
 title_separator          : "-"
 name                     : &name "Jamie Smith" # &name is a YAML anchor which can be *referenced later
 description              : &description "Astrophotographers do it in the dark"
