--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,3 +10,7 @@ jamiesmith:
   instagram    : "jamiesmithnc"
   astrobin     : jamiesmithnc
   cloudynights : 15886-jrs
+
+butch_phaneuf:
+  name         : "Butch Phaneuf"
+
